# bitwarden-rust

./: --help  .gitignore  Cargo.toml  README.md  activate-workflow.sh  build-all.sh
.github/workflows/: release.yml
docs/: workflow-release.yml
src/: main.rs
src/api/: admin.rs  auth.rs  ciphers.rs  folders.rs  mod.rs  orgs.rs  sends.rs  sync.rs
src/crypto/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
