[package]
name = "bitwarden-rs"
version = "0.1.0"
edition = "2021"
description = "A lightweight Bitwarden-compatible server written in Rust"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Authentication & Crypto
jsonwebtoken = "9"
ring = "0.17"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
data-encoding = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
hex = "0.4"
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"

[[bin]]
name = "bitwarden-rs"
path = "src/main.rs"
